<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_add_product"
        android:icon="@drawable/ic_add1"
        android:title="@string/title_add_product" />

    <item
        android:id="@+id/navigation_add_product_type"
        android:icon="@drawable/ic_add1"
        android:title="@string/title_add_product_type" />

    <item
        android:id="@+id/navigation_delete_product"
        android:icon="@drawable/ic_delete"
        android:title="@string/title_delete_product" />

    <item
        android:id="@+id/navigation_delete_product_type"
        android:icon="@drawable/ic_delete"
        android:title="@string/title_delete_product_type" />

</menu>